--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,831 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+@charset "UTF-8";
+body{
+  font-family: 'Meiryo', 'Hiragino Kaku Gothic ProN', sans-serif;
+}
+/*通常時の見出しと本文について(これをもとに他の見出し等を作成してもよい)*/
+.headline{   /*これは見出し,デザインは要検討*/
+  width: 90%;
+  margin: 10vw auto 5vw;
+  font-size: 5vw;
+  text-align: center;
+  position: relative;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.headline::after{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1.3vw;
+  content: '';
+  border-radius: 3px;
+  background-image: linear-gradient(to left, #2af598 0%, #009efd 100%);
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+/*ヘッダーについて*/
+.header {
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding: 1vw 2vw;
+    background-color: #b71c1c;
+}
+.header-icon{
+    width: 9vw;
+    height: auto;
+    /*border-radius: 50%;*/
+}
+.icon-name{
+  text-decoration: none;
+  color: #ffffff;
+  font-size: clamp(10px, 4vw, 45px);
+  font-weight:bold;
+  padding-left: 1.5vw;
+}
+.left-header-content{
+  display: flex;
+  align-items: center;
+}
+.top-button-container{
+  
+}
+.top-button:hover{
+  text-decoration:underline;
+}
+.top-button{
+  text-decoration:none;
+  color: #ffffff;
+  font-size: clamp(10px, 2vw, 20px);
+  font-weight: bold;
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+/*グローバルナビについて*/
+.nav__menu {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav__item {
+    text-align: center;
+    border-right:1px dashed #000;
+    background-color: #faf2d7; 
+    flex: 1;
+}
+.nav__item:last-child{
+    border-right:none;
+}
+.nav__link {
+    text-decoration: none;
+    color: #616161;
+    font-size: clamp(6px, 2vw, 20px);
+    font-weight:bold;
+    display:block;
+    font-family:'Meiryo',sans-serif;
+}
+
+.nav__icon {
+    max-width: 65px;
+    width: 10vw;
+    height: auto;
+    display:block;
+    margin:0 auto;
+}
+
+/*スライドショーの部分について*/
+.slide {
+    position:absolute;
+    top:0;
+    left: 0;
+    width:100%;
+    height:100%;
+    opacity: 0;  /* 非アクティブなスライドを透明にする */
+    transition: opacity 1s;  /* 透明度の変化に1秒かける */
+    
+}
+.slide.active {
+    opacity: 1;  /* アクティブなスライドを不透明にする */
+}
+.slide img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+}
+#slideshow-container{
+    position:relative;
+    width: 100%;
+    height:50vw;
+    max-width:800px;
+    max-height:450px;
+    margin: 0 auto;
+    overflow:hidden;
+}
+#slideshow{
+    position:relative;
+    width: 100%;
+    height:100%;
+}
+.slide-text {  /* テキストのスタイルを設定 */
+    position: relative;
+    bottom: 70%;
+    left: 40%;
+    width: 100%;
+    color: #fff;
+    font-size: 2.5vw;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);  /* テキストに影を追加 */
+    background-color:rgba(39, 196, 73, 0.5);
+    padding: 7px;
+}
+
+/*ここはスライド下のテキストについて*/
+#text-container{
+    text-align: justify;
+    margin:3% 10% ;
+    padding:10px;
+    border-width:3px;
+    border-style:solid;
+    border-color:#b71c1c;
+    font-size: 2vw;
+}
+
+/* ここはエントリーのボタン */
+.slide-button-container{
+    position: absolute;
+    bottom:-35%;
+    left: -0.5px;
+    z-index: 1;
+}
+.slide-button{
+    position: relative;
+    bottom: -0.5vw;
+    display: inline-block;
+    padding: 1vw 2vw;
+    background-color: #e65100;
+    color: #ffffff;
+    font-family:'Meiryo',sans-serif;
+    font-weight: bold;
+    text-shadow: none;
+    text-decoration: none;
+    border-radius: 1vw;
+    font-size: 2.5vw;
+    transition: background-color 0.3s;
+}
+
+.slide-button:before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -7%;
+    width: 100%;
+    font-size: 3vw;
+    height: 3vw;
+    background-color: #ac3f04;
+    border-radius: 1vw;
+    transition: background-color 0.3s;
+    z-index: -1;
+}
+
+.slide-button:hover{
+    background-color: #c64700;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+/*ここは最新のニュースについて*/
+.news-container {
+    max-width: 800px;
+    max-height:450px;
+    margin: auto;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 2vw;
+  }
+  
+.news-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: row;
+    border-bottom: 1px solid rgb(199, 196, 196);
+}
+
+.news-header > div {
+    display:flex;
+    align-items: flex-start;
+}
+
+  .news-header h2 {
+    font-size: 4vw;
+    margin-bottom: 10px;
+    color: #333333;
+    margin-bottom: 0;
+    padding-bottom: -6px
+  }
+  
+  .news-header h2 span {
+    font-size: 2.5vw;
+    color: #18e269;
+    margin-left: 10px;
+  }
+  
+  .news-list {
+    margin-bottom: 1vw;
+    flex: 1;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  
+  .news-item {
+    display: flex;
+    align-items: center;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 1vw;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  }
+  
+  .news-item .newicon{
+    font-size: 2vw;
+    color: red;
+    font-weight: bold;
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+
+  .news-item .iconblank{
+    font-size: 2vw;
+    padding-right: 4.9em;
+  }
+
+  .news-item .date {
+    width: auto;
+    font-size: 2vw;
+    font-weight: bold;
+    color: #666;
+    margin-right: 2em;
+  }
+  
+  .news-item .news-title {
+    flex: 1;
+    color: black;
+    font-weight:bold;
+    font-size: 2vw;
+    text-decoration: none;
+  }
+
+  .news-title:hover{
+    text-decoration: underline;
+  }
+  
+  .news-link {
+    display: inline-block;
+    padding: 1.5vw 3vw;
+    background-color: #333;
+    color: #fff;
+    font-family:'Meiryo',sans-serif;
+    font-weight: bold;
+    font-size: 2vw;
+    text-decoration: none;
+    border-radius: 1.5vw;
+    transition: background-color 0.3s;
+    align-self: flex-end;
+    position: relative;
+    top: -1vw;
+  }
+  
+.news-link:before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -6%;
+    width: 100%;
+    font-size: 2vw;
+    height: 3vw;
+    background-color: #111;
+    border-radius: 1.5vw;
+    transition: background-color 0.3s;
+    z-index: -1;
+}
+
+  .news-link:hover {
+    background-color: #666;
+  }
+
+  .news-link:hover:before{
+    background-color:#666;
+  }
+
+  /* ここは名城カップ魅力画像について */
+  .charm{
+    text-align: center;
+  }
+  .charm img{
+    width: 60%;
+    height: auto;
+
+  }
+
+  /*ここは画像下エントリーボタンについて*/
+.entry-button-container{
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    padding-top: 3%;
+}
+.entry-button{
+    position: relative;
+    display: inline-block;
+    padding: 2vw 5vw;
+    background-color: #e65100;
+    color: #ffffff;
+    font-family:'Meiryo',sans-serif;
+    font-weight: bold;
+    text-shadow: none;
+    text-decoration: none;
+    border-radius: 1vw;
+    font-size: 3vw;
+    transition: background-color 0.3s;
+}
+
+.entry-button:before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -7%;
+    width: 100%;
+    font-size: 3vw;
+    height: 3vw;
+    background-color: #ac3f04;
+    border-radius: 1vw;
+    transition: background-color 0.3s;
+    z-index: -1;
+}
+
+.entry-button:hover{
+    background-color: #c64700;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.arrow{
+    font-family:'Meiryo',sans-serif;
+    font-weight: bold;
+    color:#ffcc80;
+}
+
+/*ここから各団体の紹介について*/
+.intro-title{
+  width: 90%;
+  margin: 1vw auto 1vw;
+  font-size: 4vw;
+  text-align: left;
+  position: relative;
+  padding-left: 5vw;
+}
+
+.intro-title::before{
+  content: "";
+  position: absolute;
+  left: 0;
+  display: inline-block;
+  height: 100%;
+  width: 2vw;
+  background-color: #b71c1c;
+  margin-right: 4vw;
+}
+
+.container{
+  width: 90%;
+  margin:3vw auto 4vw;
+}
+
+/*----------紹介(左文章、右写真の配置)----------*/
+.left-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.text{
+  width: 45%;
+  font-size: 3vw;
+  text-align: justify;
+  word-break: break-all;
+}
+
+.image{
+  width: 50%;
+}
+
+.image img{
+  width: 100%;
+  height: auto;
+  border-radius: 3vw;
+}
+
+/*----------紹介(左写真、右文章の配置)----------*/
+.right-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: row-reverse;
+}
+
+.text{
+  width: 45%;
+  font-size: 2.7vw;
+  text-align: justify;
+  word-break: break-all;
+}
+
+.image{
+  width: 50%;
+}
+
+.image img{
+  width: 100%;
+  height: auto;
+}
+/*---ツール・ド・南砺実行委員会についてのボタン---*/
+.intro1-button-container {
+  text-align: left; 
+}
+
+.intro1-button-container button {
+  padding: 0.5vw 4vw;
+  font-size: 3vw;
+  color: #34980d;
+  background-color: #fff;
+  border: 0.4vw solid;
+  border-radius: 10vw;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.intro1-button-container button:hover{
+  color: #fff;
+  background-color: #34980d;
+}
+
+/*---富山県南砺市についてのボタン---*/
+.intro2-button-container {
+  text-align: right; 
+}
+
+.intro2-button-container button {
+  padding: 0.5vw 4vw;
+  font-size: 3vw;
+  color: #b71c1c;
+  background-color: #fff;
+  border: 0.4vw solid;
+  border-radius: 10vw;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.intro2-button-container button:hover{
+  color: #fff;
+  background-color: #c71c1c;
+}
+
+/*---wild runnerについてのボタン---*/
+.intro3-button-container {
+  text-align: left; 
+}
+
+.intro3-button-container button {
+  padding: 0.5vw 4vw;
+  font-size: 3vw;
+  color: #0d47a0;
+  background-color: #fff;
+  border: 0.4vw solid;
+  border-radius: 10vw;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+.intro3-button-container button:hover{
+  color: #fff;
+  background-color: #0d47a0;
+}
+
+
+
+@media (max-width: 450px) {
+  .left-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .right-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .text{
+    order:2;
+    width: 90%;
+    font-size: 4vw;
+
+  }
+  .image{
+    order:1;
+    width: 90%;
+  }
+  .intro1-button-container,
+  .intro2-button-container,
+  .intro3-button-container{
+    text-align: right;
+    padding-right: 5vw;
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+/* SNSについて */
+#sns-area{
+  align-items: flex-end;
+  padding: 1vw 1vw 0;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+@media (max-width: 450px){
+  #sns-area{
+    margin-bottom: -3vw;
+  }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.sns-intro{
+  padding-left: 2vw;
+  font-size: 2vw;
+  font-weight: bold;
 }
-
-a {
-  color: inherit;
+.sns-container{
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  padding: 1vw 1vw 0;
+}
+.sns-link{
   text-decoration: none;
 }
+.sns-link:hover{
+  text-decoration: underline;
+  text-decoration-color: black;
+}
+.sns-item{
+  display: flex;
+  align-items: center;
+  width: 40vw;
+  padding: 1.2vw;
+  border: 0.2vw solid;
+  border-color: #cccbcb;
+  font-size: 2vw;
+  color: black;
+  font-weight: bold;
+  background-color: #fff;
+}
+.sns-item img{
+  width: 6vw;
+  height: auto;
+  border-radius: 21%;
+}
+.sns-name{
+  padding-left:3vw; 
+}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+/* フッターについて */
+.footer-container{
+  background-color: #e0dede;
+  display: flex;
+  flex-direction: column;
+}
+footer{
+  width: 100%;
+  background-color: #414141;
+  color:white;
+  padding: 1vw 3vw 2vw;
+  position: relative;
+}
+.footer-title{
+  font-size: 2.3vw;
+}
+.footer-text{
+  font-size: 1.7vw;
+}
+.footer-copyright{
+  position: absolute;
+  right: 3vw;
+  bottom: 1.5vw;
+  font-size: 1.5vw;
+}
+.footer-button-container{
+  text-align: right; 
+}
+.footer-button{
+  text-decoration: none;
+  padding: 0.3vw 2vw;
+  font-size: 1.7vw;
+  color: #060606;
+  background-color: #6fe3f5;
+  border: 0.2vw solid;
+  border-radius: 2vw;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  position: absolute;
+  right: 3vw;
+  bottom: 3.7vw;
+}
+.footer-button:hover{
+  color: #fff;
+  background-color: #6599a0;
+}
+
+/* ニュースページに関する内容 */
+.news-page-container{
+  text-align: center;
+}
+.news-image{
+  width: 65%;
+  border-radius: 2vw;
+}
+.news-text{
+  margin: 5vw;
+  font-size:3vw;
+  text-align: justify;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+.renewal{
+  text-align: right;
+}
+.news-link-button-container{
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  padding: 2vw  0 7vw;
+}
+.news-link-button{
+  position: relative;
+  display: inline-block;
+  padding: 2vw 5vw;
+  background-image: linear-gradient(to left, #2af598 0%, #009efd 100%);
+  color: #ffffff;
+  font-family:'Meiryo',sans-serif;
+  font-weight: bold;
+  text-shadow: none;
+  text-decoration: none;
+  border-radius: 1vw;
+  font-size: 3vw;
+  transition: background-color 0.3s;
+}
+
+.news-link-button:before{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -7%;
+  width: 100%;
+  font-size: 3vw;
+  height: 3vw;
+  background-image: linear-gradient(to left, #1fb471 0%, #037bc6 100%);
+  border-radius: 1vw;
+  transition: background-color 0.3s;
+  z-index: -1;
+}
+
+.news-link-button:hover{
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+/* ニュース一覧（タイル型）のページに関する内容 */
+.news-tile-container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding:2vw 2vw 10vw;
+  gap:2vw
+  
+}
+.news-tile-items{
+  background-color: #d8f8c9;
+  border-radius: 1vw;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+.news-tile-items:hover{
+  background-color: #bad6ad;
+}
+.news-tile-image{
+  width:100%;
+  padding: 1vw;
+  border-radius: 2vw;
+}
+.news-tile-renewal{
+  padding:0vw 1vw;
+  color:#616161;
+  font-weight:bold; 
+}
+.news-tile-title{
+  padding:1vw;
+  font-weight: bold;
+}
+.news-tile-text{
+  padding:0vw 1vw 1vw;
+}
+
+@media (max-width: 800px){
+  .news-tile-container{
+    grid-template-columns: repeat(2, 1fr);
+    padding: 2vw 5vw 10vw;
+    gap: 4vw;
   }
 }
+@media (max-width: 450px){
+  .news-tile-container{
+    grid-template-columns: repeat(1, 1fr);
+    padding: 2vw 10vw 10vw;
+    gap: 6vw;
+  }
+  .news-tile-image{
+    border-radius: 5vw;
+    padding: 3vw;
+  }
+  .news-tile-renewal{
+    padding: 0vw 3vw;
+  }
+  .news-tile-title{
+    padding: 1vw 3vw;
+    font-weight: bold;
+  }
+  .news-tile-text{
+    padding:0vw 3vw 1vw;
+  }
+}
+
+/* レギュレーションに関する内容 */
+/* 大会概要について */
+/* 表の装飾 */
+table{
+  border-collapse: collapse;
+  text-align: left;
+  margin: auto;
+}
+th, td{
+  padding: 2vw;
+  border: 1px solid black;
+}
+th{
+  background-color: whitesmoke;
+}
+/* ---「表の装飾」↑ここまで--- */
+.regulation{
+  display: none;
+}
+.regulation.active{
+  display: block;
+}
+.buttons{
+  display: flex;
+  justify-content: space-around;
+}
+.buttons button{
+  margin: 2vw;
+  padding: 2vw 7vw;
+  display: inline-block;
+  font-weight: bold;
+  background-color: white;
+  color: black;
+  border: 1px solid;
+  transition: background-color 0.3s;
+}
+@media(max-width:450px){
+  .buttons button{
+    padding: 2vw 4vw;
+  }
+}
+.buttons button:hover{
+  background-color: black;
+  color: white;
+}
+.buttons button.active{
+  background-color: black;
+  color: white;
+}
+.buttons button:active{
+  background-color: black;
+  color: white;
+}
+/* 大会規定 */
+.regulation-text{
+  border: 1px solid black;
+  padding: 2vw;
+  margin: 0 10vw;
+}
+.regulation-text img{
+  width: 100%;
+  height: auto;
+}
+@media(min-width: 450px){
+  .regulation-text img{
+    width: 50%;
+    height: auto;
+  }
+}
+
+/* 試合結果に関するcss */
