--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: 'MyFont', sans-serif;
+  font-family: sans-serif;
 }
 .race-results {
   
@@ -27,13 +27,23 @@ body {
   text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
 }
 .select-container {
+  display: flex;
+  justify-content: space-between;
   text-align: center;
   margin-bottom: 20px;
 }
+.select-container a{
+  color: #5a5a5a;
+ text-decoration: none;
+}
+
+.select-container a:hover{
+  text-decoration: underline;
+ }
 .race-select {
-  
+  font-family:  sans-serif;
   font-size: 1em;
-  padding: 10px;
+  padding: 12px;
   border-radius: 5px;
   border: 2px solid #ff9ab3;
   background-color: #fff;
@@ -42,6 +52,7 @@ body {
 }
 .race-group {
   margin-bottom: 30px;
+  
 }
 .race-title {
   background-color: #ffd1dc;
@@ -52,19 +63,25 @@ body {
   font-size: 1.7em;
   border-bottom: 2px solid #ff9ab3;
   text-shadow: 2px 2px 4px rgba(249, 106, 142, 0.6);
+  border-radius: 5px 5px 0px 0px;
 }
 .table-container {
   overflow-x: auto;
+  border-left: 1px solid #ffe4e8;
+  border-right: 1px solid #ffe4e8;
+  border-radius:0px 0px 5px 5px;
 }
 .results-table {
   width: 100%;
   border-collapse: collapse;
+
 }
 .results-table th,
 .results-table td {
   padding: 12px 15px;
   text-align: center;
   border-bottom: 1px solid #ffe4e8;
+  
 }
 .results-table th {
   background-color: #fff0f3;
@@ -72,6 +89,7 @@ body {
   color: #ff6b8b;
   text-transform: uppercase;
   font-size: 0.9em;
+  
 }
 .results-table tr:nth-child(even) {
   background-color: #fff9fa;
